--- a/LocateMyLoot/.project
+++ b/LocateMyLoot/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>testFX</name>
+	<name>LocateMyLoot</name>
 	<comment></comment>
 	<projects>
 	</projects>
